# manifold

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  check_grads.py  compile_cuda_12.9.bat  compile_cuda_kernels.py  debug_backward.py  debug_parity_binary.py  diagnose_dynamics.py  diagnose_training.py  diff_versions.py  patch_v2.6.2_log.md  physics_analysis_v2.6.2.md  physics_correlation_report.md  pyproject.toml  requirements.txt  setup.py  verify_convergence_dual.py
.venv311/Scripts/: activate  activate.bat  get_gprof  get_objgraph  undill
checkpoints/medium_fast/: test_nokernels.txt
configs/demos/: sorting.yaml  wikitext.yaml
configs/model/: gfn_large.yaml  gfn_medium.yaml  gfn_small.yaml  gfn_v1_0.yaml
configs/training/: experiment_medium.yaml  math_oracle.yaml  v1_0_math_oracle.yaml
demos/sorting/: train_inf_sorting.py  train_thinking_sorting.py
demos/wikitext/: generate.py  train_wikitext.py
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  JUSTIFICATION.md  PHASE_12_INF.md  PHYSICS.md  PYTHON_PROJECT_AUDIT.md  README.md  RISKS_AND_MITIGATIONS.md  ROADMAP_v0.4.md  SCIENTIFIC_PAPER.md  TRAINING.md  audit_geometry_layers.md  audit_integrators.md  audit_scientific_alignment.md  audit_system_comparison.md  audit_system_consistency.md  audit_vis_gfn_superiority.md
examples/: yoshida_example.py
gfn/: __init__.py  embeddings.py  geometry.py  layers.py  losses.py  model.py  optim.py  readout.py
gfn/cuda/: autograd.py  compile_cuda_12.9.bat  cuda_kernels.cpp  ops.py  setup.py  triton_kernels.py
scripts/: benchmark_inference.py  train.py  verify_cuda_kernels.py
src/: __init__.py  embeddings.py  geometry.py  layers.py  losses.py  model.py
src/cuda/: ops.py  (+1 more)
tests/: debug_cuda_usage.py  debug_fusion.py  debug_gradients.py  debug_hang.py  debug_integrators.py  debug_loss_components.py  inspect_runtime_source.py  profile_cuda.py  test_convergence.py  test_cuda_dispatch.py  test_cuda_numerical.py  test_fusion_kernel.py  test_training_mode.py  verify_cuda_autograd.py
(+62 files in other folders)
